<resources>
    <string name="app_name">Apptitude</string>
    <string name="action_settings">Settings</string>

    <!--Onboarding-->
    <string-array name="onboarding_messages">
        <item>Get fit</item>
        <item>Stay Healthy</item>
        <item>Apptitude</item>
    </string-array>
    <string name="onboarding__btn_text">Get Started</string>

    <!--Navigation Bottom Bar-->
    <string name="navigation_profile">Profile</string>
    <string name="navigation_workout">Workout</string>
    <string name="navigation_schedule">Schedule</string>
    <string name="navigation_tracker">Tracker</string>
    <string name="preference_file_key">FITNESS_TRACKER_SHARED_PREF</string>
    <string name="create_user_first_name_hint">First name</string>
    <string name="create_user_last_name_hint">Last name</string>
    <string name="create_user_age_hint">Age</string>
    <string name="create_user_weight_hint">Weight</string>
    <string name="create_user_enter_info_text">Enter your information</string>

    <string name="dashboard_user_name">Hello, %1$s!</string>
    <string name="toolbar_logout">Logout</string>
    <string name="logout_message">See you soon!</string>
    <string name="create_user_username_hint">Username</string>
    <string name="onboarding_login_text">Login</string>
    <string name="login_password_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="create_user_password_hint">Password</string>

    <!--Tracker Page-->
    <string name="body">Body</string>
    <string name="nutrition">Nutrition</string>
    <string name="bpart">Body Part</string>
    <string name="create_body_button_text">Record Body Measurement</string>
    <string name="create_body_body_fat_hint">Body Fat</string>
    <string name="create_body_weight_hint">Weight</string>
    <string name="create_body_enter_info_text">Enter body information</string>
    <string name="create_nutr_button_text">Record Nutrition</string>
    <string name="create_nutr_calories_hint">Calories</string>
    <string name="create_nutr_macronutrient_hint">Macronutrient</string>
    <string name="create_nutr_macro_protein_hint">Protein(g)</string>
    <string name="create_nutr_macro_carb_hint">Carbohydrate(g)</string>
    <string name="create_nutr_macro_fat_hint">Fat(g)</string>
    <string name="create_nutr_micro_name_hint">Name</string>
    <string name="create_nutr_micro_amount_hint">Amount</string>
    <string name="create_nutr_enter_info_text">Enter nutrition information</string>
    <string name="create_bpart_button_text">Record Body Part</string>
    <string name="create_bpart_body_part_hint">Body Part</string>
    <string name="create_bpart_body_part_size_hint">Body Part Size</string>
    <string name="create_bpart_enter_info_text">Enter body part information</string>

    <!--Dialog-->
    <string name="create_text">Create</string>
    <string name="cancel_text">Cancel</string>

    <string name="add_exercise">Add exercise</string>
    <string name="pick_workout">Pick workout</string>
    <string name="create_workout">Create workout</string>
    <string name="finish_workout">Finish Workout</string>
    <string name="workout_progress_warning">Workout is unfinished. Do you want to finish?</string>
    <string name="workout_progress_warning_title">Workout in progress</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="save_recording_ok">Save</string>
    <string name="nutrition_calories">Calories</string>

    <!--Daily Value-->
    <string name="daily_nut_info">Daily Nutritional Info</string>
    <string name="calories">Calories</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="daily_default">0</string>


    <!--Goals-->
    <string name="goal_text">Goal:</string>
    <string name="goal_date_text">Complete by:</string>
    <string name="create_goal_button_text">Create Goal</string>
    <string name="create_goal_desc_hint">Goal Description</string>
    <string name="create_goal_date_hint">Completion Date</string>
    <string name="create_goal_enter_info_text">Enter goal information</string>
    <string name="goals_header">Goals:</string>

    <!--Micronutrients-->
    <string name="micronutrient_name_text">Micronutrient Name</string>
    <string name="micronutrient_amt_text">Amount</string>
    <string name="micronutrient_text">Micronutrients</string>
    <string name="create_micronutr_text">Add Micronutrient</string>

    <string name="history">History</string>
    <string name="user_is_trainer_text">Are you a trainer?</string>
    <string name="create_user_email">Email</string>
    <string name="add_user_to_schedule">Add user to schedule</string>
    <string name="add_micronutrient">Add micronutrient</string>
</resources>
